# wasm

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  jsonstat.d.ts  jsonstat.js  tsconfig.json
.github/workflows/: ci.yml  release.yml
docs/: API.md  INSTALL.md
docs/releases/: v0.1.2.md  v0.2.0.md  v0.2.1.md  v0.3.0.md  v0.4.0.md  v0.4.1.md
scripts/: build.sh  patch-package-json.js  release.sh
src/: lib.rs  models.rs  query.rs
